<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferenceActivity">

    <LinearLayout
        android:layout_width="601dp"
        android:layout_height="960dp"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose the category"
            android:textSize="16dp"></TextView>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/allChips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="2dp"
                app:singleLine="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/carChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cars" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/buildingChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Building Supplies" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/computerChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Computers" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/gameChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Games" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/petChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pet Supplies" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sportChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sport Supplies" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/furnitureChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Furniture" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/craftChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Crafts and Supplies" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/clothesChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clothes" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cookingChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cooking" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/otherChip"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Other" />

            </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter the minimum and maximum value"
            android:textSize="16dp"></TextView>

        <EditText
            android:id="@+id/minValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter minimum value."
            android:inputType="number"
            android:textSize="16dp"></EditText>

        <EditText
            android:id="@+id/maxValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter maximum value."
            android:inputType="number"
            android:textSize="16dp"></EditText>

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose a distance"
            android:textSize="16dp"></TextView>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/distanceChips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="false"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/tenDist"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0-10km"
                android:tag="10"
                android:checked="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/twentyFiveDist"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="25"
                android:text="11-25km" />

            <com.google.android.material.chip.Chip
                android:id="@+id/fiftyDist"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="50"
                android:text="26-50km" />

            <com.google.android.material.chip.Chip
                android:id="@+id/hundredDist"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="100"
                android:text="51-100km" />

            <com.google.android.material.chip.Chip
                android:id="@+id/twoHundredDist"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="200"
                android:text="101-200km" />

            <com.google.android.material.chip.Chip
                android:id="@+id/twoHundredPlusDist"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="1000"
                android:text="200km+" />
        </com.google.android.material.chip.ChipGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:id="@+id/preferenceButton"
            android:text="Search">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:id="@+id/prefStatusLabel"
            android:text="">
        </TextView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>